removed watcher strategy

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             'debug': true,
             'startAfterClick': 0,
             'strategyTimeout': false,
-            'strategy': 'jumper'
+            'jumpTimeout': 10
         });
     });
 </script>
